--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
 
-    0<Button
+    <Button
     android:id="@+id/Gomb"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
