--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -21,10 +21,18 @@
         android:layout_below="@+id/kiir"
         android:id="@+id/kiir2"
         ></TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@color/design_default_color_secondary"
+        android:layout_below="@+id/kiir2"
+        android:id="@+id/kiir3"
+        ></TextView>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/kiir2"
+        android:layout_below="@+id/kiir3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Back Home"
