--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,51 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#404449"
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/regisztracio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Regisztráció covid oltásra"
-        android:textSize="28dp"
-        android:layout_marginTop="20dp"
-
-        />
-
     <Button
         android:id="@+id/Gomb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/Kep"
-        android:layout_marginTop="151dp"
-        android:text="Na gyerünk!" />
-
-    <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Kep"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:textSize="28dp"
-        android:text="Inkább rendelek egy kis piát!"
-
-        />
-
+        android:layout_marginTop="50dp"
+        android:text="RegisztrĂˇciĂł"/>
 
     <ImageView
-        android:layout_below="@+id/regisztracio"
         android:id="@+id/Kep"
         android:layout_width="400dp"
         android:layout_height="200dp"
         android:layout_marginTop="24dp"
+        android:src="@drawable/vakcina" />
+    <ImageView
+        android:id="@+id/Beer"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
+        android:layout_below="@+id/Gomb"
+        android:layout_marginTop="50dp"
         android:src="@drawable/pia"
-
+        android:layout_centerHorizontal="true"
+        />
+    <TextView
+        android:id="@+id/szoveg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inkább rendelek egy kis piát"
+        android:layout_below="@+id/Beer"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        />
+    <Button
+        android:id="@+id/pia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Katt ide"
+        android:layout_below="@+id/szoveg"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         />
 
+
 </RelativeLayout>
+
+
     
