--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/Kep"
         android:layout_marginTop="50dp"
-        android:text="RegisztrĂˇciĂł"/>
+        android:text="Regisztráció"/>
 
     <ImageView
         android:id="@+id/Kep"
